Sucking in the hotspot junkies.